--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -13,9 +13,9 @@
                                 <h1 class = "m-0">Add user</h1>
                             </div>
                             <div class = "col-sm-6">
-                                <ol class = "breadcrumb float-sm-right">
+                                <ol class = "breadcrumb float-right">
                                     <li class = "breadcrumb-item"><a href = "/">Home</a></li>
-                                    <li class = "breadcrumb-item"><a href = "/user">User</a></li>
+                                    <li class = "breadcrumb-item"><a href = "/user">user</a></li>
                                     <li class = "breadcrumb-item active">Add</li>
                                 </ol>
                             </div>
@@ -28,7 +28,36 @@
                             <div class = "col-12">
                                 <div class = "card">
                                     <div class = "card-body">
-                                        code here
+                                        <form method = "post" th:action = "@{/user/new/save}" th:object = "${UserDTO}">
+                                            <input th:name = "${_csrf.parameterName}" th:value = "${_csrf.token}" type = "hidden"/>
+                                            <div class = "form-group">
+                                                <label for = "name">Name</label>
+                                                <input class = "form-control" id = "name" placeholder = "Enter username here" required th:field = "${UserDTO.username}" type = "text">
+                                                <p th:errorclass = "text-danger" th:errors = "${UserDTO.username}" th:if = "${#fields.hasErrors('username')}"></p>
+                                            </div>
+                                            <div class = "form-group">
+                                                <label for = "password">Password</label>
+                                                <input class = "form-control" id = "password" placeholder = "Enter password here" required th:field = "${UserDTO.password}" type = "password">
+                                                <p th:errorclass = "text-danger" th:errors = "${UserDTO.password}" th:if = "${#fields.hasErrors('password')}"></p>
+                                            </div>
+                                            <div class = "form-group mb-0">
+                                                <label for = "confirmPassword">Confirm password</label>
+                                                <input class = "form-control" id = "confirmPassword" placeholder = "Enter confirm password here" required th:field = "${UserDTO.confirmPassword}" type = "password">
+                                                <p th:errorclass = "text-danger" th:errors = "${UserDTO.confirmPassword}" th:if = "${#fields.hasErrors('confirmPassword')}"></p>
+                                            </div>
+                                            <div class = "form-group">
+                                                <label class = "col-form-label" for = "roles">Roles</label>
+                                                <div class = "d-flex flex-wrap">
+                                                    <div class = "form-check me-3" th:each = "role : ${userRoleList}">
+                                                        <input class = "form-check-input" id = "role-${role.id}" th:field = "*{roles}" th:value = "${role.id}" type = "checkbox"/>
+                                                        <label class = "form-check-label" th:for = "'role-' + ${role.id}" th:text = "${role.name.toUpperCase()}"></label> &nbsp;
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class = "text-center">
+                                                <button class = "btn btn-primary float-middle" type = "submit">Save</button>
+                                            </div>
+                                        </form>
                                     </div>
                                 </div>
                             </div>
