--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,23 +17,19 @@
         <div class = "container d-flex justify-content-center">
             <div class = "card card-info" style = "margin-top: 20px; min-width: 50vw">
                 <div class = "card-header">
-                    <h3 class = "card-title">Đăng nhập</h3>
+                    <h3 class = "card-title">Login</h3>
                 </div>
                 <form class = "form-horizontal" method = "post" th:action = "@{/login}">
                     <div class = "card-body">
                         <div class = "form-group row">
-                            <input class = "form-control" name = "username" placeholder = "Tên tài khoản" required type = "text">
+                            <input class = "form-control" name = "username" placeholder = "Username" required type = "text">
                         </div>
                         <div class = "form-group row mb-0">
-                            <input class = "form-control" name = "password" placeholder = "Mật khẩu" required type = "password">
+                            <input class = "form-control" name = "password" placeholder = "Password" required type = "password">
                         </div>
                     </div>
                     <div class = "card-footer">
-                        <div class = "float-left">
-                            Chưa có tài khoản ?
-                            <a class = "text-decoration-none" href = "/register">Đăng ký</a>
-                        </div>
-                        <button class = "btn btn-info float-right" type = "submit">Đăng nhập</button>
+                        <button class = "btn btn-info float-right" type = "submit">Login</button>
                     </div>
                 </form>
             </div>
